[gd_scene load_steps=9 format=3 uid="uid://roaprccwlnsd"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_3hqqr"]
[ext_resource type="Texture2D" uid="uid://cim45b6kichkk" path="res://tile_0064.png" id="1_nvf5y"]
[ext_resource type="PackedScene" uid="uid://rfu7k2ub7y3k" path="res://scenes/games/another_test/another_test.tscn" id="2_pqrro"]
[ext_resource type="PackedScene" uid="uid://dnklfui8rvhg3" path="res://scenes/games/test_game/test_game.tscn" id="3_eoe34"]

[sub_resource type="Animation" id="Animation_ynero"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(226, 316)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightDoor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(926, 316)]
}

[sub_resource type="Animation" id="Animation_2fy7r"]
resource_name = "close"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(-355, 316), Vector2(226, 316)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightDoor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(1515, 316), Vector2(926, 316)]
}

[sub_resource type="Animation" id="Animation_gbgnm"]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(226, 316), Vector2(-355, 316)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightDoor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(926, 316), Vector2(1515, 316)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s2qx0"]
_data = {
"RESET": SubResource("Animation_ynero"),
"close": SubResource("Animation_2fy7r"),
"open": SubResource("Animation_gbgnm")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_3hqqr")
game_list = Array[PackedScene]([ExtResource("2_pqrro"), ExtResource("3_eoe34")])

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TransitionVisuals" type="Node2D" parent="."]

[node name="Transition" type="CanvasGroup" parent="TransitionVisuals"]

[node name="LeftDoor" type="Sprite2D" parent="TransitionVisuals/Transition"]
position = Vector2(226, 316)
scale = Vector2(38.8688, 38.8688)
texture = ExtResource("1_nvf5y")

[node name="RightDoor" type="Sprite2D" parent="TransitionVisuals/Transition"]
position = Vector2(926, 316)
scale = Vector2(38.8688, 38.8688)
texture = ExtResource("1_nvf5y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionVisuals/Transition"]
libraries = {
"": SubResource("AnimationLibrary_s2qx0")
}

[node name="VictoryLabel" type="Label" parent="TransitionVisuals/Transition"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 532.0
offset_top = 305.0
offset_right = 620.0
offset_bottom = 343.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Nice!!"

[node name="DefeatLabel" type="Label" parent="TransitionVisuals/Transition"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 532.0
offset_top = 305.0
offset_right = 620.0
offset_bottom = 343.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Oops... :("

[node name="Hud" type="CanvasGroup" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Hud"]
follow_viewport_enabled = true

[node name="GameEndTimerDisplay" type="Label" parent="Hud/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
